# up-manuscript

./: .gitignore  .travis.yml  README.md  build  build.sh  config.lua
cli/: cli.cabal  stack.yaml
cli/src/: Main.hs
conf_ieee_template/: .latexmkrc  README.md  conference_041818.tex
content/: abstract.tex  appendix.tex  t.tex  x.tex
doctoral_template/: .latexmkrc  dissertation.bib  dissertation.tex
doctoral_template/appendices/acronyms/: main.tex
doctoral_template/coverpages/: main.tex
extensions/: functions.lua  inputall.lua  title.lua
manuscript/: manuscript.cabal
manuscript/src/: Main.hs
postgrad_template/: .latexmkrc  dissertation.tex
postgrad_template/coverpages/: main.tex
