name:                manuscript
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cirg-up/manuscript#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable manuscript
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Paths_manuscript
  build-depends:       base >= 4.7 && < 5
                     , safe
                     , turtle
                     , text
                     , language-lua >= 0.10.0 && <0.11
                     , wreq
